nohup.out
Traceback (most recent call last):
  File "/home/hooniegit/git/fastapi-load/main.py", line 2, in <module>
    from routers import update_data_router, remove_data_router, update_parquet_router
  File "/home/hooniegit/git/fastapi-load/routers/update_parquet_router.py", line 10
    location_id = 
                  ^
SyntaxError: invalid syntax
INFO:     Started server process [287405]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:9000 (Press CTRL+C to quit)
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [287405]
